--- a/starter/frontend/k8s/deployment.yaml
+++ b/starter/frontend/k8s/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: frontend
+          image: frontend:latest
           ports:
             - containerPort: 3000
