--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -1,7 +1,10 @@
 name: Frontend CI Workflow
 
 on:
-  pull_request:
+  # pull_request:
+  #   branches:
+  #     - main
+  push:
     branches:
       - main
   workflow_dispatch:
