--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -7,7 +7,7 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch: starter/frontend
+  workflow_dispatch: 
 
 jobs:
   lint:
@@ -21,10 +21,14 @@ jobs:
         uses: actions/setup-node@v3
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          cd starter/frontend
+          npm ci
 
       - name: Run lint
-        run: npm run lint
+        run: |
+          cd starter/frontend
+          npm run lint
 
   test:
     needs: lint
@@ -39,10 +43,14 @@ jobs:
         uses: actions/setup-node@v3
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          cd starter/frontend
+          npm ci
 
-      - name: Run tests
-        run: npm run test
+      - name: Run lint
+        run: |
+          cd starter/frontend
+          npm run test
 
   build:
     needs: [lint, test]
@@ -57,10 +65,14 @@ jobs:
         uses: actions/setup-node@v3
 
       - name: Install dependencies
-        run: npm ci
-      
-      - name: build frontend
-        run: npm run test
+        run: |
+          cd starter/frontend
+          npm ci
+
+      - name: Run lint
+        run: |
+          cd starter/frontend
+          npm run build
 
   # deploy:
   #   needs: build
