--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -41,7 +41,7 @@ jobs:
         run: |      
           cd starter/backend
           pipenv shell
-          pipenv run lint
+          pipenv run test
 
   test:
     needs: lint
