--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -17,9 +17,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: '3.10'
 
 
       - name: Restore cache and install dependencies
@@ -41,7 +41,7 @@ jobs:
         run: |      
           cd starter/backend
           pipenv shell
-          pipenv run test
+          pipenv run lint
 
   test:
     needs: lint
@@ -52,9 +52,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: '3.10'
 
 
       - name: Restore cache and install dependencies
@@ -87,9 +87,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: '3.10'
 
       - name: Restore cache and install dependencies
         uses: actions/cache@v2
