--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -35,7 +35,7 @@ jobs:
           cd starter/backend
           pip install pipenv
           pipenv install
-          pipenv shell
+          pipenv --python 3.10 
           pip run lint
 
 
