--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -71,47 +71,6 @@ jobs:
         run: |      
           cd starter/backend
           pip install pipenv
-          pipenv shell
-          pipenv install
+          pipenv install --deploy --dev
           pipenv run test
 
-
-      # - name: Run lint
-      #   run: |      
-      #     cd starter/backend
-
-      #     pipenv run test
-
-  # build:
-  #   needs: [lint, test]
-
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v2
-
-  #     - name: Setup Python
-  #       uses: actions/setup-python@v4
-  #       with:
-  #         python-version: '3.10'
-
-  #     - name: Restore cache and install dependencies
-  #       uses: actions/cache@v2
-  #       with:
-  #         path: ~/.cache/pip
-  #         key: ${{ runner.os }}-python-${{ hashFiles('**/requirements.txt') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-python-
-
-  #     - name: Install dependencies
-  #       run: |      
-  #         cd starter/backend
-  #         pip install pipenv
-  #         pipenv install 
-
-
-  #     - name: Run lint
-  #       run: |      
-  #         cd starter/backend
-
-  #         pipenv run test
