--- a/starter/backend/k8s/deployment.yaml
+++ b/starter/backend/k8s/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: backend
-          image: backend
+          image: 615115875849.dkr.ecr.us-east-1.amazonaws.com/backend:latest
           ports:
             - containerPort: 5000
