--- a/starter/frontend/k8s/deployment.yaml
+++ b/starter/frontend/k8s/deployment.yaml
@@ -19,6 +19,6 @@ spec:
           image: 615115875849.dkr.ecr.us-east-1.amazonaws.com/frontend:latest
           env:
           - name: REACT_APP_MOVIE_API_URL
-            value: backend:5000
+            value: backend.default.svc
           ports:
             - containerPort: 3000
