--- a/starter/frontend/k8s/deployment.yaml
+++ b/starter/frontend/k8s/deployment.yaml
@@ -17,8 +17,8 @@ spec:
       containers:
         - name: frontend
           image: 615115875849.dkr.ecr.us-east-1.amazonaws.com/frontend:latest
-          # env:
-          # - name: REACT_APP_MOVIE_API_URL
-          #   value: backend.default.svc
+          env:
+          - name: REACT_APP_MOVIE_API_URL
+            value: http://a3549aa7c04f24014a142474af808c94-793286478.us-east-1.elb.amazonaws.com
           ports:
             - containerPort: 3000
