--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -1,10 +1,7 @@
 name: Backend CI Workflow
 
 on:
-  # pull_request:
-  #   branches:
-  #     - main
-  push:
+  pull_request:
     branches:
       - main
   workflow_dispatch:
